--- a/index.html
+++ b/index.html
@@ -6,29 +6,33 @@
       <title>Coito?</title>
    </head>
    <body id="body">
+      <div id="videoThingie">
+         <div class="content-top">
+            <h1>You won't last even 10 seconds with this BULL</h1>
+         </div>
+            <div class="buttons">
+               <button id="button1" onclick="showImg1()">Neko</button>
+               <button id="button2" onclick="hiddeImg()">Stop</button>
+            </div>
+      <video id="img1" src="Video/NecoArcVibe.mp4" loop></video>
+</div>
+      <!--              funny music
       <audio autoplay loop>
          <source src="audio/neco-arc.mp3" type="audio/mp3"> 
       </audio>
-      <div class="content">
-         <div class="content-top">
-            <h1>You won't last even 10 seconds on bed with me</h1>
-         </div>
-         <div class="content-bottom-text">
-            <button id="button1" onclick="showImg1()">Neko</button>
-            <button id="button2" onclick="hiddeImg()">Stop</button>
-            <button id="button3" onclick="showImg2()">Arc</button>
-         </div>
-         <div class="content-bottom-img">
-            <img id="img1" src="https://c.tenor.com/mZ_XDJhczAAAAAAC/neco-arc-dance.gif" >
-            <img id="img2" src="https://c.tenor.com/mZ_XDJhczAAAAAAC/neco-arc-dance.gif">
-         </div>
+      -->
       </div>
+      <div class="bottom">
       <label for="weather"> Select the background color my friend</label>
       <select id="weather">
-         <option value="white"> White</option>
          <option value="black"> Black</option>
+         <option value="white"> White</option>
          <option value="red"> Red</option>
+         <option value="green"> Green</option>
+         <option value="blue"> Blue</option>
+         <option value="yellow"> Yellow</option>
       </select>
+   </div>
       <script src="./script.js"></script>
       </body>
    </html>
