--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
    <head>
       <link rel="stylesheet" href="style.css">
       <meta charset="utf-8">
-      <title>Coito?</title>
+      <meta property="description" content="Don't enter in this website if someone else is around">
+      <title>You won't last</title>
    </head>
    <body id="body">
       <div id="videoThingie">
